# novai-platform

./: .env  .env.example  .gitignore  FINAL_TEST_RESULTS.md  QUICK_START.md  README.md  TEST_RESULTS.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  turbo.json
apps/api-gateway/: Dockerfile  package.json  tsconfig.json
apps/api-gateway/prisma/: schema.prisma
apps/api-gateway/src/: config.ts  index.ts
apps/api-gateway/src/routes/: asset.ts  auth.ts  (+4 more)
apps/generation-service/: .gitignore  Dockerfile  pyproject.toml  test_dashscope.py
apps/generation-service/src/: config.py  main.py
apps/generation-service/src/services/: __init__.py  dashscope_service.py  gemini_service.py  imagen_service.py  veo_service.py
apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: TextGenerator.tsx  TextToImageGenerator.tsx  TextToVideoGenerator.tsx
apps/web/lib/: api.ts
docs/: ALIBABA_CLOUD_SETUP.md  DOCUMENT.md  FRONTEND_COMPLETE.md  FRONTEND_STATUS.md  HOW_TO_RUN_FRONTEND.md  TIMELINE.md
infra/kubernetes/: README.md  api-gateway.yaml  generation-service.yaml  ingress.yaml  monitoring.yaml  namespaces.yaml  secrets.example.yaml  service-account.yaml
infra/terraform/: database.tf  gke.tf  iam.tf  lb.tf  main.tf  network.tf  outputs.tf  redis.tf  storage.tf  variables.tf
infra/terraform/alicloud/: ack.tf  main.tf  network.tf  oss.tf  outputs.tf  ram.tf  rds.tf  redis.tf  slb.tf  variables.tf
novai-platform/: TEST_RESULTS.md
scripts/: test-api.sh
(+4 files in other folders)
